--- a/index.html
+++ b/index.html
@@ -1,61 +1,41 @@
-<!DOCTYPE html>
-<html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<title>My Home Page</title>
+
 <style>
-  
-  body {
-    background-color: rgba(16, 0, 119, 0.39);
-    margin: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: url(pointersnap.gif), auto
-  }
-  .grass {
-    position: absolute;
-    background-color: green;
-    width: 100%;
-    height: 50%;
-    bottom: 0px;
-  }
-  .trunk1 {
-    position: absolute;
-    background-image: url(treetrunk.png);
-    height: 500px;
-    width: 200px;
-    border: 3px solid black;
-    background-size: 400px;
-  }
-  .tent {
-    position: absolute;
-    border: 3px solid black;
-    width: 400px;
-    height: 500px;
- 															   top: 25%;
-    background-image: linear-gradient(#ffffff 51%, #b12020 51%);
-    background-size: 100% 40%;
-    transform: rotate(90deg);
+
+  div {
+    background-color: red;
+    width: 100px;
+    height: 100px;
+    display: inline-block;
   }
   
-  .banner {
+  .diamond {
     position: absolute;
-    border: 3px solid black;
-    width: 300px;
-    height: 40px;
- 															   top: 20%;
   }
+  
 </style>
-    
-	</head>
-	<body>
- <div class="grass"></div>
-  <div class="trunk1"></div>
-  <div class="trunk2"></div>
-  <div class="banner"></div>
-  <div class="index"></div>
-		
-  </body>
-</html>
+<div class="diamond"></div>
+<div></div>
+
+<script>
+  /*you must set autoUpdate to false then open the console*/
+  let a = false 
+  let b = "nevermore"
+  let c = 100
+  c = 50
+  let d = Math.random ()
+  function newPatch () {
+    //code to create new div//
+  }
+  while (patches=0) {
+    newPatch()
+  				  patches = patches + 10
+    //is the same thing as
+    patches++
+  }
+  
+  function animate () {
+    newPatch()
+    setTimeout(animate, 1000)
+  }
+  nn.on('load', animate)
+</script>
